Closed
Bug 414239
Opened 18 years ago
Closed 18 years ago
firefox3/firefox-bin: symbol lookup error: firefox3/libxul.so: undefined symbol: pango_font_describe_with_absolute_size
Categories
(Firefox Build System :: General, defect, P2)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9beta4
People
(Reporter: benya, Assigned: karlt)
References
Details
(Keywords: crash, regression)
Attachments
(1 file, 1 obsolete file)
|
1.83 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9b3pre) Gecko/2008012704 Minefield/3.0b3pre
Minefield crashes with error message
firefox3/firefox-bin: symbol lookup error: firefox3/libxul.so: undefined symbol: pango_font_describe_with_absolute_size
every time when trying to type something in the url bar.
Reproducible: Always
Steps to Reproduce:
1. Start minefield
2. Try to type something in the url bar
fedora core 5, kernel-2.6.20-1.2316.fc5, gtk2-2.8.20-1
| Reporter | ||
Updated•18 years ago
|
Component: General → OS Integration
Version: unspecified → Trunk
Comment 1•18 years ago
|
||
I can confirm this. It looks like Pango 1.14 (that's when this call was added to Pango) is a new requirement.
DISTRIB_ID=Ubuntu
DISTRIB_RELEASE=6.06
DISTRIB_CODENAME=dapper
DISTRIB_DESCRIPTION="Ubuntu 6.06 LTS"
Comment 2•18 years ago
|
||
I'm running:
Mozilla/5.0 (X11; U; Linux i686 (x86_64); en-US; rv:1.9b3pre) Gecko/2008013104 Minefield/3.0b3pre ID:2008013104
(In reply to comment #1)
> I can confirm this. It looks like Pango 1.14 (that's when this call was added
> to Pango) is a new requirement.
>
> DISTRIB_ID=Ubuntu
> DISTRIB_RELEASE=6.06
> DISTRIB_CODENAME=dapper
> DISTRIB_DESCRIPTION="Ubuntu 6.06 LTS"
>
Comment 3•18 years ago
|
||
I can also confirm.
I'm a linux newbie, but I have Ubuntu Dapper with the latest official updates installed and pango is listed as 1.12.3-0ubuntu3.
Comment 4•18 years ago
|
||
I cannot reproduce with Debian unstable.
Pango in my distro is 1.18.4.
It may be related to Pango's version.
Comment 5•18 years ago
|
||
This updates the minimum version of pango required for 1.9 builds.
Assignee: nobody → bill
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Updated•18 years ago
|
Assignee: bill → nobody
Status: ASSIGNED → NEW
Component: General → Build Config
Product: Firefox → Core
QA Contact: general → build-config
Updated•18 years ago
|
Assignee: nobody → bill
Flags: blocking1.9?
Updated•18 years ago
|
Attachment #300874 -
Flags: review?(ted.mielczarek)
Updated•18 years ago
|
Blocks: 401988
Keywords: regression
| Assignee | ||
Comment 6•18 years ago
|
||
(In reply to comment #5)
> This updates the minimum version of pango required for 1.9 builds.
Thanks, Bill. While this is consistent with http://wiki.mozilla.org/Linux/Runtime_Requirements, I'd rather not enforce this unless necessary. Some people do have their own builds with older versions. I'll post a patch to avoid using pango_font_describe_with_absolute_size().
| Assignee | ||
Comment 7•18 years ago
|
||
This is similar to what is done in CreateScaledFont and is actually consistent with what pango_font_description_get_size does in Pango-1.18.2.
(The fallback to point size on problems is what pango_font_description_get_size does and at least tells us whether the font has zero or non-zero size.)
Attachment #300913 -
Flags: review?(roc)
| Assignee | ||
Comment 8•18 years ago
|
||
Comment on attachment 300913 [details] [diff] [review]
use FC_PIXEL_SIZE instead of pango_font_describe_with_absolute_size
> consistent
with what pango_font_description_get_size does in Pango-1.18.2
I mean pango_font_describe_with_absolute_size
Attachment #300913 -
Attachment description: use FC_PIXEL_SIZE instead of pango_font_description_get_size → use FC_PIXEL_SIZE instead of pango_font_describe_with_absolute_size
Comment 9•18 years ago
|
||
(In reply to comment #6)
> unless necessary. Some people do have their own builds with older versions.
> I'll post a patch to avoid using pango_font_describe_with_absolute_size().
>
I agree. It's always better not to change the build requirements
unnecessarily.
| Assignee | ||
Updated•18 years ago
|
Attachment #300874 -
Attachment is obsolete: true
Attachment #300874 -
Flags: review?(ted.mielczarek)
Attachment #300913 -
Flags: superreview+
Attachment #300913 -
Flags: review?(roc)
Attachment #300913 -
Flags: review+
Updated•18 years ago
|
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
| Assignee | ||
Comment 11•18 years ago
|
||
checked-in: mozilla/gfx/thebes/src/gfxPangoFonts.cpp revision 1.129
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•18 years ago
|
Target Milestone: --- → mozilla1.9beta4
Updated•8 years ago
|
Product: Core → Firefox Build System
You need to log in
before you can comment on or make changes to this bug.
Description
•