use FC_PIXEL_SIZE instead of pango_font_describe_with_absolute_size b=414239 r+sr=roc